--- a/application/templates/home.html
+++ b/application/templates/home.html
@@ -10,7 +10,7 @@
 
 {% block body_content %}
 <div >
-        <hr>
+
         <!-- carousel -->
           <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
@@ -62,54 +62,51 @@
           </div>
     </div>
     <!-- About Us -->
-
-    <div class="container p-2 ms-2 me-2" >
-        <div class="row justify-content-center" id="aboutus">
-            <div class="col-8" >
-                <a name="about"></a>
-                <h2>EVERYBODY IS WELCOME AT THE UK'S FAVOURITE GYM</h2>
+    <div class="container-fluid justify-content-evenly">
+        <div class="col-12 justify-content-center align-items-center" id="aboutus" style="text-align: center;">
+            <a name="about"></a>
+                <h2 style="text-align: center;">WELCOME TO THE UK'S FAVOURITE GYM</h2>
                 <p>From low cost flexible memberships and <strong>24 hour</strong> opening times, to quality gym equipment and classes included, there are loads of reasons why Pure Fitness is the UK's favourite gym.
-                    Our mission is to help people everywhere to lead a healthy and happy life every day. Come and join us today.
-                    We are centrally located:<strong>150 Piccadilly, St. James's, London W1J 9BR</strong></p>
+                <p>Our mission is to help people everywhere to lead a healthy and happy life every day. Come and join us today.</p>
+                <p>We are centrally located: <strong>150 Piccadilly, St. James's, London W1J 9BR</strong></p>
             </div>
         </div>
 
-    </div>
-    <br>
 
     <!-- Facilities -->
     <div class="container-fluid justify-content-evenly">
-        <div class="row justify-content-center align-items-center">
-            <div class="col-8">
-                <h3>JOIN US AND ENJOY THESE AMAZING FACILITIES AND BENEFITS </h3>
-
-            </div>
-        </div>
-         <div class="row justify-content-evenly">
-            <div class="col-xs col-md-6 box-two reveal-text-on-image" data-text="Swim in our beautiful 30m pool and viewing gallery is the perfect place to come and swim.">
-
-            </div>
-
-            <div class=" col-xs col-md-6 box-three reveal-text-on-image" data-text="Spread over three floors, our gym features cardio equipment to choose from, including a new TRX system.">
-            </div>
+        <div class="col-12 justify-content-center align-items-center">
+                <h2 style="text-align: center;">ENJOY THESE AMAZING FACILITIES AND BENEFITS</h2>
+                <br>
         </div>
 
+    </div>
     <div class="row justify-content-evenly">
+        <div class="col-xs col-md-3 box-two reveal-text-on-image" data-text="Swim in our beautiful 30m pool and viewing gallery is the perfect place to come and swim.">
+            </div>
 
-    <div class="col-xs col-md-3 box-four reveal-text-on-image" data-text="Our group fitness studio plays host to a variety of different classes. Find the right class for you and you can meet new people too.">
+        <div class=" col-xs col-md-3 box-three reveal-text-on-image" data-text="Spread over three floors, our gym features cardio equipment to choose from, including a new TRX system.">
+            </div>
+
+        <div class="col-xs col-md-3 box-four reveal-text-on-image" data-text="Our group fitness studio plays host to a variety of different classes. Find the right class for you and you can meet new people too.">
+            </div>
+
+        <div class="col-xs col-md-3 box-five reveal-text-on-image" data-text="Come and relax, unwind and refresh yourself in our health suite, whether that’s after a workout, or just a hard day at work">
+            </div>
+
+        </div>
+    </div>
+    <div class="container-fluid justify-content-evenly">
+        <div class="col-12 justify-content-center align-items-center">
+            <br>
+            <h2 style="text-align: center;">THREE LEVELS OF MEMBERSHIP TO CHOOSE FROM</h2>
+            <br>
+        </div>
     </div>
 
-    <div class="col-xs col-md-3 box-five reveal-text-on-image" data-text="Come and relax, unwind and refresh yourself in our health suite, whether that’s after a workout, or just a hard day at work">
-    </div>
-
-    </div>
-</div>
-
-
-    <br>
     <div class="flex-container">
         <p class="p-2" style="background-color:#FED9B7;">
-        <div class="row" style="background-color:#FDFCDC;">
+        <div class="row" style="padding-left: 20px; padding-top: 20px; background-color:#FDFCDC;">
             <div class="col-md-4 box-six">
                 <h2 style="color:#0081A7;">Bronze Membership</h2>
                     <p>Limited access to:</p>
@@ -117,8 +114,7 @@
                         <li>Gym</li>
                         <li>Swimming pools</li>
                         <br>
-                            <p>Price: £20pm excluding £10 joining fee</p>
-                            <p>(cancellation fee £20)</p>
+                        <p><strong>Price: £20pm</strong>, excluding £10 joining fee (cancellation fee £20)</p>
                     </ul>
 
             </div>
@@ -132,7 +128,7 @@
                             <li>Bring a guest 1 x a month</li>
                             <li>Book classes 5 days in advance</li>
                                 <br>
-                                <p>Price: £40pm excluding £10 joining fee</p>
+                            <p><strong>Price: £40pm</strong>, excluding £10 joining fee</p>
                         </ul>
             </div>
             <div class="col-md-4 box-eight">
@@ -147,58 +143,74 @@
                             <li>Exclusive access 14 days in advance</li>
                             <li>Personal trainer</li>
                              <br>
-                            <p>Price: £75pm, no joining fee</p>
+                            <p><strong>Price: £75pm</strong>, no joining fee</p>
                         </ul>
             </div>
+            <p class="p-2" style="background-color:#FED9B7;">
         </div>
-    </div>
-    <br>
+
     <br>
     <!-- covid-secure -->
-
-    <div class="d-inline-flex flex-column justify-content-start align-items-centre" style="background-color:#00AFB9; color:#FDFCDC;">
-        <div class="box-ten">
-                <h2 class="h-2" style="background-color:#F07167;padding-top: 15px;
-                    padding-right: 15px; padding-bottom: 15px; padding-left: 15px;"><img src='static/images/covid_secure_icon.png'
-                    alt="Covid-friendly" width="75" class="d-inline-block" style="border-radius: 50px 50px 50px 50px;">  Covid-Secure</h2>
-
-                        <p>It's what we've been waiting for and we're so excited to see you back in the centre soon.</p>
-                        <p>Our areas are Covid-19 secure and we're cleaning around the clock to make sure that you feel safe when you work out.</p>
+        <div class="container-fluid justify-content-evenly">
+        <div class="col-12 justify-content-center align-items-center">
+            <br>
+                <h3 style="text-align: center;">BE REASSURED</h3>
         </div>
+            <br>
 
-
-
-    <div class="d-inline-flex flex-column justify-content-start align-items-centre" style="background-color:#00AFB9; color:#FDFCDC;">
-        <div class="box-ten">
-                <h2 class="h-2" style="background-color:#F07167;padding-top: 15px;
-                    padding-right: 15px; padding-bottom: 15px; padding-left: 15px;">Why do our customers love our centre?</h2>
-
-                        <p>"As a long-term gym user, I rate this gym very, very highly! The friendly front-desk staff helped me to find my way around the gym. The new Assault
-                            bike has taken my workouts to a new level (with the support videos to help me to use this equipment).</p>
-                            <p>I cannot thank the staff enough for their friendliness and support.
-                            The cleanliness of the centre is of a high standard, I feel safe using the facilities” - The Rock</p>
-                            <img src='static/images/dwayne_johnson.jpg' alt="The Rock" width="150" class="d-inline-block" style="border-radius: 50px 50px 50px 50px;">
-        </div>
-
-        <div class="card mb-3 bg-secondary" style="max-width:540px;">
-            <div class="row g-0">
-              <div class="col-md-4">
-                <img src="static/images/dwayne_johnson.jpg" style="max-width:100% " height="400vh"alt="dwayne-johnson">
+      <div class="card mb-3 bg-secondary" style="center max-width:720px;">
+         <div class="row g-0">
+             <div class="col-md-4">
+                <img src="static/images/gym.jpg"  class="card-img-top" height="400vh"alt="Lady cleaning gym equipment">
               </div>
-              <div class="col-md-8">
+              <div class="col-md-6 text right">
                 <div class="card-body">
-                  <h5 class="card-title">A Word From Dwayne</h5>
-                  <p class="card-text text-white">"As a long-term gym user, I rate this gym very, very highly! The friendly front-desk staff helped me to find my way around the gym. The new Assault
-                    bike has taken my workouts to a new level (with the support videos to help me to use this equipment).</p>
-                    <p class="card-text text-white">I cannot thank the staff enough for their friendliness and support.
-                    The cleanliness of the centre is of a high standard, I feel safe using the facilities” - The Rock</p>
+                  <h5 class="card-title"></h5>
+                  <p class="card-text text-white">
 
+                            <div class="card" >
+                        <div class="card-body">
+                        <h5 class="card-title" style="color: #00AFB9; ">Covid-Secure</h5>
+                            <p class="card-text">It's what we've been waiting for and we're so excited to see you back in the centre soon.</p>
+                            <p>Our areas are Covid-19 secure and we're cleaning around the clock to make sure that you feel safe when you work out.</p>
+                            <img src='static/images/covid_secure_icon.png' alt="Covid-friendly" width="75" class="d-inline-block" style="border-radius: 50px 50px 50px 50px;">
+                        </div>
+                        </div>
+                    </div>
                 </div>
-              </div>
+            </div>
+        </div>
+
+        <div class="container-fluid justify-content-evenly">
+        <div class="col-12 justify-content-center align-items-center">
+                <h3 style="text-align: center;">WE LOVE HEARING FROM YOU</h3>
+                <br>
+        <div class="card-group center">
+          <div class="card">
+            <img src="static/images/dwayne_johnson.jpg" class="card-img-top" alt="Dwayne Johnson">
+            <div class="card-body">
+              <h5 class="card-title" style="color: #00AFB9;">A Word From Dwayne</h5>
+              <p class="card-text">"As a long-term gym user, I rate this gym very, very highly! The friendly front-desk staff
+                  helped me to find my way around the gym. The new Assault bike has taken my workouts to a new level
+                  (with the support videos to help me to use this equipment).</p><p>I cannot thank the staff enough for
+                    their friendliness and support. The cleanliness of the centre is of a high standard, I feel safe using the facilities”</p>
+            </div>
+            <div class="card-footer">
+              <small class="text-muted">- The Rock</small>
             </div>
           </div>
+              <div class="card">
+            <img src="static/images/beyonce.png" class="card-img-top" alt="Beyonce">
+            <div class="card-body">
+              <h5 class="card-title" style="color: #00AFB9;">Blethering with Beyoncé</h5>
+              <p class="card-text">"When at Pure Fitness I love using a mix of personal training, Cardio, and Cycle classes.
+                  A session at Pure Fitness is always top of my agenda schedule when visiting London. After all my world tours,
+                  I can honestly say, there is no gym like it in the world.!"</p>
+              <p class="card-text"><small class="text-muted">- Beyoncé</small></p>
+            </div>
+                  <br>
 
-
+          </div>
           <br>
     </div>
 
