--- a/application/templates/policy.html
+++ b/application/templates/policy.html
@@ -4,7 +4,7 @@
 
 {% block title %}Policy{% endblock %}
 {% block body_content %}
-<h1>The finer details of our policies </h1>
+<h1 style="padding-left: 20px;">The finer details of our policies </h1>
 <div class="accordion" id="accordionExample">
   <div class="accordion-item">
     <h2 class="accordion-header" id="headingOne">
