--- a/application/templates/contact_feedback.html
+++ b/application/templates/contact_feedback.html
@@ -1,12 +1,14 @@
 {% extends "layout.html" %}
 
-{{ url_for('templates', filename='my_contact.html') }}
+{{ url_for('templates', filename='contact_feedback.html') }}
 
 {% block title %}My Contact{% endblock %}
 
 {% block body_content %}
 
 <div>
+    <br>
+    <br>
     <div class="card">
         <div class="card-body">
 
