--- a/application/templates/home.html
+++ b/application/templates/home.html
@@ -203,8 +203,8 @@
             <img src="static/images/beyonce.png" class="card-img-top" alt="Beyonce">
             <div class="card-body">
               <h5 class="card-title" style="color: #00AFB9;">Blethering with Beyoncé</h5>
-              <p class="card-text">"When at Pure Fitness I love using a mix of personal training, Cardio, and Cycle classes.
-                  A session at Pure Fitness is always top of my agenda schedule when visiting London. After all my world tours,
+              <p class="card-text">"When at Gym Fitness I love using a mix of personal training, Cardio, and Cycle classes.
+                  A session at Gym Fitness is always top of my agenda schedule when visiting London. After all my world tours,
                   I can honestly say, there is no gym like it in the world.!"</p>
               <p class="card-text"><small class="text-muted">- Beyoncé</small></p>
             </div>
