--- a/application/templates/activities.html
+++ b/application/templates/activities.html
@@ -9,9 +9,13 @@
 {% block title %}ActivitiesBook a Class{% endblock %}
 
 {% block body_content %}
+<body style="background-color:#CAF0F8;">
+<br>
+<br>
+<br>
 <div class="row justify-content-center">
         <div class="col-md-8 col-12">
-            <h2>Our Daily Classes</h2>
+            <h2 style="color:black;">Our Daily Classes</h2>
                 <p>We offer a wide range of activities every day for all ages and abilities.</p>
                 <p>Our instructors are highly qualified and experienced professionals ready to
                     help you achieve your goals.</p>
@@ -42,21 +46,19 @@
 </div>
 <br>
 {% if current_user.is_authenticated %}
-    <a href="{{ url_for('booking') }}">
-   <button>Book</button>
-    </a>
+
 {%else%}
-    <a href="{{ url_for('login') }}">
-    <button>Login</button>
-    </a>
-<div class="border-top pt-3">
-        <small class="text-muted">
-            Login or Register now to book a Class. <a class="ml-2" href="{{ url_for('login') }}">Register here</a>
+<div class="border-top pt-3 ps-3">
+        <small class="">
+            <strong>Login or Register now to book a Class. <a class="ml-2" href="{{ url_for('login') }}">Register here</strong></a>
         </small>
     </div>
 {% endif %}
-
+    <div>
+        <img style="position:relative; left:0px; right:0px; width:100%;" src="static/images/longimage.jpg" alt="spinning class">
+    </div>
 <br>
 <br>
+</body>
 
 {% endblock %}
