--- a/application/templates/activities.html
+++ b/application/templates/activities.html
@@ -15,7 +15,7 @@
 <br>
 <div class="row justify-content-center">
         <div class="col-md-8 col-12">
-            <h2 style="color:black;">Our Daily Classes</h2>
+            <h2 style="color:#F07167;">Our Daily Classes</h2>
                 <p>We offer a wide range of activities every day for all ages and abilities.</p>
                 <p>Our instructors are highly qualified and experienced professionals ready to
                     help you achieve your goals.</p>
