--- a/application/templates/my_bookings.html
+++ b/application/templates/my_bookings.html
@@ -12,7 +12,8 @@
 <body style="background-color:#CAF0F8;">
 <div class="row justify-content-center">
         <div class="col-md-8 col-12">
-            <h2 style="color:black;">Current bookings</h2>
+            <h2 style="color:#F07167;">Current bookings</h2>
+
                 <p>Your current bookings are shown in the table below.</p>
         </div>
       </div>
@@ -41,7 +42,7 @@
   <form class="container" method="POST" action="{{ url_for('my_bookings') }}">
       <div class="row justify-content-center">
           <div class="col-md-8 col-12">
-              <h1 style="color:black;" class="h3 mb-3 fw-normal"><strong>Cancel a booking</strong></h1>
+              <h1 style="color:#F07167;" class="h3 mb-3 fw-normal"><strong>Cancel a booking</strong></h1>
         </div>
       </div>
 
@@ -71,7 +72,8 @@
 <hr>
       <div class="row justify-content-center">
         <div class="col-md-8 col-12">
-            <h2 style="color:black;" >Past bookings</h2>
+            <h2 style="color:#F07167;" >Past bookings</h2>
+
                 <p>The table below displays any previous classes you have attended.</p>
         </div>
       </div>
