--- a/application/templates/contact.html
+++ b/application/templates/contact.html
@@ -7,37 +7,38 @@
 {% block body_content %}
 <br>
 <br>
-<div class="row justify-content-center">
-        <div class="col-md-8 col-12">
+<div class="container ps-5">
+<div class="row justify-content-center text-center">
+        <div class=" col-12">
             <h2>How can we help you today?</h2>
                 <p>If you need to get in touch, please complete the form below.</p>
         </div>
       </div>
-<main class="form-contact">
+<main class=" form-contact row justify-content-center text-center ">
   <form method="POST" action="{{ url_for('contact') }}">
     <div>
 
     </div>
-    <div class="form-row">
+    <div class="form-row row justify-content-center text-center">
         <div class="col-md-4 mb-3">
           {{ form.name.label }} {{ form.name }}
         <br>
         </div>
     </div>
-        <div class="form-row">
+        <div class="form-row row justify-content-center text-center">
             <div class="col-md-4 mb-3">
           {{ form.email_address.label }} {{ form.email_address(placeholder='example@getfit.com') }}
         </div>
     </div>
-    <div class="form-row">
+    <div class="form-row row justify-content-center text-center">
         <div class="col-md-4 mb-3">
             {{ form.subject.label }} {{ form.subject }}
             <br>
         </div>
     </div>
-    <div class="form-row">
+    <div class="form-row row justify-content-center text-center">
         <div class="col-md-4 mb-3">
-        {{ form.question.label }} {{ form.question(cols="50", rows="5", id='larger',maxlength=500, placeholder='Max. 500 characters') }}
+        {{ form.question.label }} {{ form.question(cols="42", rows="7", id='larger',maxlength=500, placeholder='Max. 500 characters') }}
         {{ submit }}
          <br>
         </div>
@@ -48,11 +49,12 @@
   </form>
 </main>
 
-<div class="row justify-content-center">
-        <div class="col-md-8 col-12">
+<div class="row justify-content-center text-center">
+        <div class="col-12">
             <h2>Frequently Asked Questions</h2>
                 <p>Our FAQ section below may help to answer any questions.</p>
         </div>
+</div>
 </div>
     <div class="accordion" id="accordionExample">
   <div class="accordion-item">
@@ -213,5 +215,6 @@
     </div>
   </div>
 </div>
+
 
 {% endblock %}
