made changes to password reset, register and butttons

--- a/application/templates/password_reset.html
+++ b/application/templates/password_reset.html
@@ -1,66 +1,72 @@
-{% if current_user.is_authenticated %}
-    {% extends "logged_layout.html" %}
-{%else%}
-    {% extends "layout.html" %}
-{% endif %}
+{% extends "layout.html" %}
 
 {{ url_for('templates', filename='password_reset.html') }}
 
-    {% block title %}Password Reset{% endblock %}
-{% block head %}
-{{ super() }}
-
-{% endblock %}
-
+{% block title %}Password{% endblock %}
 
 {% block body_content %}
-<body style="background-color:rgb(202, 240, 248);">
-<div class="container reset-body-container height">
-    <div class="container reset-container vh-10 mb-5">
+<head>
+<link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/sign-in/">
+</head>
+<br>
+<br>
+<div class="text-center">
 
-        <form method="POST" action="{{ url_for('password_reset') }}">
-         <div class="row mb-3 mt-3">
-             <div class="col-md-8 ">
-                {{ form.email.label }} {{ form.email(class="reset-label") }}
-                <div class="valid-feedback">
-                Looks good!
-                </div>
-
-             </div>
+<main class="form-signin">
+  <form class="container" method="POST" action="{{ url_for('password_reset') }}">
+      <div class="row justify-content-center">
+          <div class="col-md-8 col-12">
+                 <img class="mb-4" src="/static/images/pf_logo.jpg" alt="GymFitnessLogo" width="100" height="100">
           </div>
-
-            <div class="row mb-3 mt-3 ">
-             <div class="col-md-8 mb-3">
-                 {{ form.new_password.label }} {{ form.new_password (class="reset-label")}}
-                 <div class="valid-feedback">
-                     Looks good!
-                 </div>
-               </div>
-            </div>
-
-         <div class="row mb-3 mt-3 ">
-            <div class="col-md-8 mb-3">
-              {{ form.confirm_new_password.label }} {{ form.confirm_new_password (class="reset-label")}}
-              <div class="valid-feedback">
-                Looks good!
-              </div>
+      <div class="col-md-8 col-12">
+      <h1 class="h3 mb-3 fw-normal">Please reset your password</h1>
         </div>
-        </div>
+      </div>
 
-        <div class="row mb-3 mt-3 ">
-        <div class="col-md-8 mb-3">
-             {{ form.submit(class="btn btn-primary") }}
-         </div>
-        </div>
+   <div class="row justify-content-center">
+  <div class="col-md-8 col-12 mb-2 ">
+    <div class="form-floating">
+      {{ form.hidden_tag() }}
+              {{ form.email.label }} {{ form.email(placeholder="example@getfit.com") }}
+              <br>
+    </div>
+    </div>
+      <div class="col-md-8 col-12 mb-2">
 
+       <div class="form-floating ">
+      {{ form.new_password.label }} {{ form.new_password }}
+              <br>
+    </div>
+      </div>
+        <div class="col-md-8 col-12 mb-2">
 
-        </form>
+       <div class="form-floating ">
+      {{ form.confirm_new_password.label }} {{ form.confirm_new_password }}
+              <br>
+    </div>
+      </div>
 
-
+  </div>
+<div class="row justify-content-center">
+    <div class="col-md-8 col-12">
+          <div class="checkbox mb-3">
+      <label>
+        <input type="checkbox" value="remember-me"> Remember me
+      </label>
+    </div>
+    <button class="btn btn-primary" type="submit">Reset</button>
+ <div class="border-top pt-3">
+        <small class="">
+            Remember your password?<a class="ml-2" href="{{ url_for('login') }}">Login in here</a>
+        </small>
+        <br>
+    </div>
     </div>
 </div>
 
-
-</body>
+    <p class="mt-5 mb-3">&copy; Gym Fitness 2021</p>
+  </form>
+</main>
+</div>
 
 {% endblock %}
