--- a/application/static/dashboard.css
+++ b/application/static/dashboard.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap');
 
-body{background-color:#fff;
+body{
+background-color:#24252A;
 font-family: 'Montserrat', sans-serif;
-
 }
 /*body end*/
 
