--- a/application/templates/login.html
+++ b/application/templates/login.html
@@ -52,6 +52,10 @@
         <small class="">
             Don’t have an account? <a class="ml-2" href="{{ url_for('register') }}">Register here</a>
         </small>
+        <br>
+        <small class="">
+            Forgotten your password? <a class="ml-3" href="{{ url_for('password_reset') }}">Reset your password here</a>
+        </small>
     </div>
     </div>
 </div>
