--- a/application/templates/my_bookings.html
+++ b/application/templates/my_bookings.html
@@ -62,7 +62,7 @@
 
 
             </div>
-<div class="justify-content-center">
+<div class="row justify-content-center">
     <div class="col-md-8 col-12 mb-2 ">
                 {{ form.submit(class="btn btn-primary") }}
             </div>
