made changes to booking flashes

--- a/application/templates/profile.html
+++ b/application/templates/profile.html
@@ -34,7 +34,7 @@
   </ul>
 
   <div class="card-body">
-    <a href="#" class="card-link">Click to update details</a>
+    <a href="{{ url_for ('password_reset') }}" class="card-link">Click to reset your password</a>
     <a href="{{ url_for ('delete_account') }}" class="card-link">Click to delete account</a>
 
   </div>
