--- a/application/templates/logged_layout.html
+++ b/application/templates/logged_layout.html
@@ -70,7 +70,15 @@
 
 </header>
 </div>
-
+ {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                <ul class=flashes style="text-align: center;">
+                {% for msg in messages %}
+                    <h3>{{ msg }}</h3>
+                {% endfor %}
+                </ul>
+            {% endif %}
+        {% endwith %}
 
 {%block body_content%}
 
