--- a/application/templates/password_reset.html
+++ b/application/templates/password_reset.html
@@ -1,4 +1,8 @@
-{% extends "layout.html" %}
+{% if current_user.is_authenticated %}
+    {% extends "logged_layout.html" %}
+{%else%}
+    {% extends "layout.html" %}
+{% endif %}
 
 {{ url_for('templates', filename='password_reset.html') }}
 
