--- a/application/static/main.css
+++ b/application/static/main.css
@@ -67,7 +67,8 @@ transition: all 0.3s ease 0s;
 
 .btn:hover {
 background-color: rgba(0, 136, 169, 0.8);
-
+padding:15px 30px;
+color:#fff;
 
 }
 
@@ -87,28 +88,35 @@ background-color: #24252A};
 }
 
 .navbar-expand-lg .navbar-nav .nav-link{
-    font-weight:500
+    font-weight:700;
     font-size:16px;
     position:relative;
     color:#ECF0F1;
     text-decoration: none;
+    border:none;
 }
 
 .navbar-expand-lg .navbar-nav .nav-link:hover{
     border-top: 2px solid rgba(0, 136, 169, 0.8);
     color:#ECF0F1;
-    font-size: 18px;
+    font-size: 20px;
 }
 .navbar-expand-lg .navbar-nav .nav-link:active{
     border-top:2px solid rgba(0, 136, 169, 0.8);
    color:rgba(0, 136, 169, 0.8);
-   font-size:18px;
+   font-size:20px;
 }
 
 .navbar .navbar-brand{
 text-decoration:none;
 color:rgba(0, 136, 169, 1);
 font-size:24px;
+font-weight:800;
+font-family: 'Poppins', sans-serif;
+}
+
+.navbar .navbar-brand:hover{
+color:#fff;
 }
 
 .nav-item{margin-right: 20px;}
