--- a/application/templates/contact.html
+++ b/application/templates/contact.html
@@ -1,4 +1,8 @@
-{% extends "layout.html" %}
+{% if current_user.is_authenticated %}
+    {% extends "logged_layout.html" %}
+{%else%}
+    {% extends "layout.html" %}
+{% endif %}
 
 {{ url_for('templates', filename='contact.html') }}
 
@@ -9,7 +13,7 @@
 <br>
 <div class="container ps-5">
 <div class="row justify-content-center text-center">
-        <div class=" col-12">
+        <div class="col-12">
             <h2>How can we help you today?</h2>
                 <p>If you need to get in touch, please complete the form below.</p>
         </div>
